updated javascript file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 	</div>
 	
 </section>
-<script type="text/javascript" src="assets/javascript/game.js"></script>
+<script type="text/javascript" src="assets/javascript/trivia.js"></script>
 </body>
 </html>
