changed timer functions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section class="container">
 	<div class="row">
 		<div class="jumbotron">
-			<h2 id="startTitle">Press Start to Begin!</h2>
+			<h2 id="startTitle">Test Your World Cup Knowledge, you get 15 seconds a question, Press Start To Begin!</h2>
 			<div id="questionDiv"></div>
 			<div id="answerMsg"></div>
 
